Fix font sizes. Was looking bad on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -131,7 +131,7 @@ html {
   }
   .header-button {
     font-family: "Open Sans Light";
-    font-size: 2em;
+    font-size: 1.5em;
     text-transform: uppercase;
     color:white;
     transition: all .5s ease;
@@ -159,7 +159,7 @@ h1, h2, h3, a, p, span {
 }
 
 p {
-  font-size: 1.4em;
+  font-size: 1em;
 }
 
 @import "*";
