--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -34,7 +34,7 @@
         h1 {
           vertical-align:middle;
           color: white;
-          font-size:8em;
+          font-size:4em;
           margin: 0;
           word-wrap: break-word;
         }
